Fix title and readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-theme-1984",
-  "displayName": "1984 for VS-Code",
+  "displayName": "1984",
   "description": "Playing with 80's aesthetics",
   "version": "0.0.4",
   "publisher": "juanmnl",
