--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
         "label": "1984 Fancy",
         "uiTheme": "vs-dark",
         "path": "./themes/1984-fancy-color-theme.json"
+      },
+      {
+        "label": "1984 Light",
+        "uiTheme": "vs",
+        "path": "./themes/1984-light-color-theme.json"
       }
     ]
   },
