Add light version screenshot, improve added resource green

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vscode-theme-1984",
   "displayName": "1984",
-  "description": "Playing with 80's aesthetics",
+  "description": "80's Neon-Styles",
   "version": "0.0.22",
   "publisher": "juanmnl",
   "engines": {
