--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vscode-theme-1984",
   "displayName": "1984",
-  "description": "80's Neon-Styles",
+  "description": "🎶I'm gonna show you where it's dark, but have no fear 🎶",
   "version": "0.0.27",
   "publisher": "juanmnl",
   "engines": {
